--- a/main.css
+++ b/main.css
@@ -131,8 +131,9 @@ button {
 .card input[type="number"],
 .card input[type="email"],
 .card input[type="password"],
+
 .card textarea {
-  border: 1px solid #999;
+  border: 2px solid #000;
   border-radius: 6px;
   padding: 6px;
   font-size: .9rem;
@@ -198,4 +199,11 @@ textarea { min-height: 100px; width: 100%; resize: none; }
   width: auto;
   height: auto;
   flex: 0 0 auto;
+}
+
+.card h2,.card h3,.card h4 {
+  margin-top: 0;
+  margin-bottom: 12px;
+  padding-top: 2px;
+  font-weight: 700;
 }
