--- a/Semester Project/main.css
+++ b/Semester Project/main.css
@@ -148,7 +148,7 @@ button {
 .footer a { 
   color: var(--ink); 
   text-decoration: none; 
-  font-weight: 700; 
+  font-weight: 600; 
 }
 
 .footer a:hover { 
@@ -375,8 +375,15 @@ textarea {
 .table th, .table td{
   text-align: left;
   padding: .6rem .75rem;
-  border-top: 1px solid black;
   vertical-align: middle;
+}
+
+.table td{
+  border-top: 1px solid black;
+}
+
+.table th {
+  border-top: 2px solid black;
 }
 
 .table thead th{
@@ -401,4 +408,16 @@ h3 a {
 
 h3 a:hover {
   text-decoration: underline;
+}
+
+.apply-button {
+  border: 2px solid black;
+  background: white;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+  height: 37px;
+  border-radius: 6px;
 }
