--- a/Semester Project/main.css
+++ b/Semester Project/main.css
@@ -399,6 +399,18 @@ textarea {
   top: 0;
 }
 
+.table {
+  table-layout: auto; 
+}
+
+.table th:nth-child(4), .table td:nth-child(4) {
+  white-space: nowrap;
+  width: 1%;
+  text-align: center;
+  padding-left: .5rem;
+  padding-right: .5rem;
+}
+
 .driver-cell {
   display: inline-flex;
   align-items: center;
@@ -439,3 +451,13 @@ h3 a:hover {
   max-width: 300px;
 }
 
+.pie-chart-vehicle {
+  width: 100%;
+  height: 300px;
+  border-radius: 50%;
+  background: conic-gradient(
+    green 0% 88%,
+    white 88% 100%);
+  margin: 20px auto;
+  max-width: 300px;
+}
