--- a/Semester Project/main.css
+++ b/Semester Project/main.css
@@ -175,6 +175,19 @@ button {
   background: white;
  }
 
+.grid-one {
+  display: grid;
+  gap: 20px;
+  height: 100%;
+ }
+
+ .grid-one textarea {
+  width: 100%;
+  height: 100%;
+  resize: none;
+  box-sizing: border-box;
+ }
+
 .grid-two {
   display: grid; 
   grid-template-columns: 1fr 1fr; 
@@ -451,7 +464,7 @@ h3 a:hover {
   max-width: 300px;
 }
 
-.pie-chart-vehicle {
+.pie-chart-history {
   width: 100%;
   height: 300px;
   border-radius: 50%;
@@ -461,3 +474,14 @@ h3 a:hover {
   margin: 20px auto;
   max-width: 300px;
 }
+
+.pie-chart-vehicle {
+  width: 350px;
+  height: 350px;
+  border-radius: 50%;
+  background: conic-gradient(
+    green 0% 95%,
+    white 95% 100%);
+  margin: 20px auto;
+}
+
