--- a/Semester Project/main.css
+++ b/Semester Project/main.css
@@ -1,12 +1,12 @@
 :root {
   --ink: black;
-  --background: #eaf4ff;
+  --background: #eef5fd;
   --card: #ffffff;
   --accent: #5d371d;
   --accent-2: #c86e2b;
   --muted: #8c8c8c;
   --radius: 20px;
-  --ring: 0 0 0 4px rgba(200,110,43,.15);
+  --ring: 0 0 0 4px #eef5fd;
   --shadow: 0 10px 30px rgba(0,0,0,.06);
 }
 
@@ -69,8 +69,7 @@ body {
 }
 
 .wrap input:focus {
-  box-shadow: 
-  var(--ring); 
+  box-shadow: var(--ring); 
 }
 
 .row {
@@ -200,11 +199,46 @@ button {
   gap: 12px;
  }
 
-.card h2, .card h3, .card h4 {
+.card h2, .card h3 {
   margin-top: 0px;
   margin-bottom: 12px;
   padding-top: 2px;
   font-weight: 700;
+}
+
+.card h4 {
+  margin: 0px;
+  padding: 2px;
+  font-weight: 700;
+}
+
+h4 {
+  font-size: 1.17em;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+h4 a {
+  color: black; 
+  font-weight: 700;
+  text-decoration: none;
+  font-size: inherit;
+  margin: 0px;
+  padding: 0px;
+}
+
+h4 a:hover {
+  text-decoration: underline;
+}
+
+h5 {
+  font-size: 1.17em;
+  font-weight: 700;
+  line-height: 1.2;
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 12px;
+  padding: 2px;
 }
 
 .card .form-row {
@@ -430,17 +464,6 @@ textarea {
   gap: 10px;
 }
 
-h3 a {
-  color: black; 
-  font-weight: 700;
-  text-decoration: none;
-  font-size: inherit;
-}
-
-h3 a:hover {
-  text-decoration: underline;
-}
-
 .apply-button {
   border: 2px solid black;
   background: white;
@@ -483,5 +506,21 @@ h3 a:hover {
     green 0% 95%,
     white 95% 100%);
   margin: 20px auto;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+}
+
+.grid-one img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 0px;
+}
+
+.grid-one {
+  flex: 1;
 }
 
