Fixed Logistic tracking history card

--- a/Semester Project/main.css
+++ b/Semester Project/main.css
@@ -523,3 +523,14 @@ textarea {
 .grid-one {
   flex: 1;
 }
+
+.grid-two .card:last-child .form-row {
+  margin-top: 20px;
+}
+
+
+.grid-two .card:last-child h3 {
+  margin-bottom: 0; 
+}
+
+
