--- a/Semester Project/main.css
+++ b/Semester Project/main.css
@@ -524,3 +524,14 @@ textarea {
   flex: 1;
 }
 
+.card form, .card {
+  display: flex;
+  flex-direction: column;
+}
+
+.card .form-row {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
