--- a/Semester Project/main.css
+++ b/Semester Project/main.css
@@ -293,7 +293,7 @@ textarea {
 }
 
 .progress div:nth-child(4) {
-  background: var(--background);
+  background: white;
 }
 
 .satisfaction {
@@ -494,7 +494,7 @@ textarea {
   top: 30%;
   left: 70%;
   transform: translate(-50%, -45%);
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 700;
   color: black; 
 }
@@ -516,7 +516,7 @@ textarea {
   top: 30%;
   left: 70%;
   transform: translate(-50%, -45%);
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 700;
   color: black; 
 }
@@ -537,7 +537,7 @@ textarea {
   top: 30%;
   left: 70%;
   transform: translate(-50%, -45%);
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 700;
   color: black; 
 }
@@ -558,7 +558,6 @@ textarea {
   flex: 1;
 }
 
-
 .logistics-card {
   display: flex;
   flex-direction: column;
@@ -571,5 +570,4 @@ textarea {
   flex-direction: column;
   justify-content: center;
 }
-
 
